<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PortfolioMain">

    <TextView android:text="@string/portfolio_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="@dimen/buttons_vertical_margin"
        android:text="@string/spotifyStreamerLabel"
        android:id="@+id/btn_spotifyStreamer"
        android:background="@color/buttonDeepOrange"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="@dimen/buttons_vertical_margin"
        android:text="@string/scoresAppLabel"
        android:id="@+id/btn_scoresApp"
        android:background="@color/buttonDeepOrange"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="@dimen/buttons_vertical_margin"
        android:text="@string/libraryAppLabel"
        android:id="@+id/btn_libraryApp"
        android:layout_gravity="bottom"
        android:background="@color/buttonDeepOrange"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="@dimen/buttons_vertical_margin"
        android:text="@string/buildItBiggerLabel"
        android:id="@+id/btn_buildItBigger"
        android:layout_gravity="center_vertical"
        android:background="@color/buttonDeepOrange"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="@dimen/buttons_vertical_margin"
        android:text="@string/xyzReaderLabel"
        android:id="@+id/btn_xyzReader"
        android:layout_gravity="center_vertical"
        android:background="@color/buttonDeepOrange"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="@dimen/buttons_vertical_margin"
        android:text="@string/capstoneLabel"
        android:id="@+id/btn_capstone"
        android:layout_gravity="center_vertical"
        android:background="@color/buttonPink"/>
</LinearLayout>
